# ancaptcha

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  compress.sh  deny.toml
.cargo/: config.toml
.forgejo/workflows/: release-ffi.yml
crates/ancaptcha/: Cargo.toml  README.md  build.rs
crates/ancaptcha-ffi/: Cargo.toml  README.md  build.rs
crates/ancaptcha-ffi/src/: lib.rs
crates/ancaptcha-ffi/src/core/: config.rs  error.rs  generate.rs  mod.rs  utils.rs  verify.rs
crates/ancaptcha-ffi/tests/: integration.rs
crates/ancaptcha/src/: common.rs  config.rs  lib.rs  validator.rs  verification.rs
crates/ancaptcha/src/common/: assets.rs  codec.rs  error.rs  mod.rs  random.rs
crates/ancaptcha/src/config/: settings.rs
crates/ancaptcha/src/crypto/: cipher.rs  mod.rs  token.rs
crates/ancaptcha/src/engine/: components.rs  css.rs  minify.rs  mod.rs  noise.rs  obfuscator.rs  processor.rs  skeleton.rs  template.rs
crates/ancaptcha/src/engine/components/: pair.rs  rotate.rs  slider.rs
crates/ancaptcha/src/storage/: cache.rs  mod.rs
crates/ancaptcha/src/styles/: slider.rs
crates/ancaptcha/src/validator/: pair.rs  rotate.rs
crates/ancaptcha/src/verification/: factory.rs  service.rs  submission.rs  validator.rs
crates/ancaptcha/tests/: integration.rs
docs/: SECURITY.md
examples/go/: main.go
examples/go/ancaptcha/: ancaptcha.go
examples/go/templates/: captcha.html  index.html
examples/php/: AnCaptcha.php  main.php
examples/php/templates/: captcha.php  index.php
examples/python/: ancaptcha.py  main.py
examples/python/templates/: captcha.html  index.html
examples/rust/: main.rs
fuzz/: .gitignore  Cargo.toml  sync_report.sh
fuzz/fuzz_targets/: submissions.rs  token_payload.rs  verify_request.rs
